I think it looks beautiful
This is my final changes

--- a/Templates/rawhtml/Project2/build-ideas.html
+++ b/Templates/rawhtml/Project2/build-ideas.html
@@ -23,68 +23,81 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
+			<div id="haveidea">
+				<h2>Have a build idea? <a href="buildideaform.html">Tell us.</a></h2>
+			</div>
+
             <div class="cards-container">
-                <div class = "card">
+                <div class = "card front">
                     <div class = "card-image">
-
+						<img src = "images/house-build.jpg" alt = "House Build" class = "build-img"  id = "house">
                     </div>
                     <div class="card-description">
-						Build
+						<h2 class = "text-desc">Starter House</h2>
                     </div>
                     <div class = "build-feedback-perc">
-						__% like this
+						75% like this
                     </div>
                 </div>
-				<div class = "card">
-                    <div class = "card-image">
 
+				<div class = "card back-display">
+					<div class = "build-material">
+						<a href = "https://youtu.be/jUmIeyMsYXE?t=34" target="_blank"><h3>Tutorial</h3></a>
+						<ul>
+							<li>Birch Wood Planks</li>
+							<li>Birch Fence</li>
+							<li>Glass Pane</li>
+							<li>Oak Door</li>
+							<li>Oak Wood Stairs</li>
+							<li>Birch Wood Slab</li>
+							<li>Oak Wood Slab</li>
+						</ul>
+					</div>
+
+					<div class = "feedback"><!-- disable after clicking 1 -->
+						<input type="button" value = "Like" id = "like-build1" class="like">
+						<input type="button" value = "Dislike" id = "dislike-build1" class="dislike">
+					</div>
+                </div>
+
+				<div class = "card front">		<!-- https://youtu.be/wQI5lww6j9I -->
+                    <div class = "card-image">
+						<img src = "images/aquarium-build.jpg" alt = "Aquarium Build" class = "build-img" id = "aquarium">
                     </div>
                     <div class="card-description">
-						Build
+						<h2 class = "text-desc">Wall-less Aquarium</h2>
                     </div>
                     <div class = "build-feedback-perc">
-						__% like this
+						80% like this
                     </div>
                 </div>
-				<div class = "card">
-                    <div class = "card-image">
 
+				<div class = "card front">		<!-- https://youtu.be/PPAa2T1pBto -->
+                    <div class = "card-image">
+						<img src = "images/stable-build.jpg" alt = "Horse Stable Build" class = "build-img" id = "stable">
                     </div>
                     <div class="card-description">
-						Build
+						<h2 class = "text-desc">Horse Stable</h2>
                     </div>
                     <div class = "build-feedback-perc">
-						__% like this
+						45% like this
                     </div>
                 </div>
-				<div class = "card">
-                    <div class = "card-image">
 
+				<div class = "card front">		<!-- https://youtu.be/kNFsOqg7aUo -->
+                    <div class = "card-image">
+						<img src = "images/boat-build.jpg" alt = "Boat Build" class = "build-img" id = "boat">
                     </div>
                     <div class="card-description">
-						Build
+						<h2 class = "text-desc">Boat House</h2>
                     </div>
                     <div class = "build-feedback-perc">
-						__% like this
-                    </div>
-                </div>
-				<div class = "card">
-                    <div class = "card-image">
-
-                    </div>
-                    <div class="card-description">
-						Build
-                    </div>
-                    <div class = "build-feedback-perc">
-						__% like this
+						100% like this
                     </div>
                 </div>
             </div>
 
-			<div id="haveidea">
-				<h2>Have a build idea? <a href="buildideaform.html">Tell us.</a></h2>
 
-			</div>
 
 		</div>
 <!-- Footer -->
