--- a/Templates/rawhtml/Project2/buildideaform.html
+++ b/Templates/rawhtml/Project2/buildideaform.html
@@ -22,15 +22,15 @@
 </div>
 <!-- Main Body of Page -->
 		<div class = "main">
-			<h2>What's Your Idea?</h2>
+			<h1>What's Your Idea?</h1>
             <form>
-                <h3>Title of build</h3>
-                <input type="text" required>
-                <h3>Give a description or link to photo of a build</h3>
-                <textarea cols="100" rows="4"></textarea><br>
+                <h2>Title of build</h2>
+                <input type="text" required><br><br>
+                <h2>Give a description or link to photo of a build</h2>
+                <textarea rows="4" style="width: 100%;"></textarea><br>
 
                 <input type="submit">
-                <h2>We will check this out! ###NOTE: this will be hidden unless submitted once javascript is implemented, and form will be posted to our email</h2>
+                <h2><br>We will check this out! ###NOTE: this will be hidden unless submitted once javascript is implemented, and form will be posted to our email</h2>
             </form>
 		</div>
 <!-- Footer -->
