--- a/Templates/rawhtml/Project2/new-world-seed.html
+++ b/Templates/rawhtml/Project2/new-world-seed.html
@@ -34,19 +34,19 @@
 
                 <div class = "tag-container">
                     <div class = "tag-col">
-                        <input type="checkbox" class = "check-box-input" name="tag1" id="tag1" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag1" id="tag1" value="Village">
                         <label for="tag1">Village</label><br>
-                        <input type="checkbox" class = "check-box-input" name="tag2" id="tag2" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag2" id="tag2" value="Village">
                         <label for="tag2">Mountains</label><br>
-                        <input type="checkbox" class = "check-box-input" name="tag3" id="tag3" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag3" id="tag3" value="Village">
                         <label for="tag3">Flat Land</label><br>
                     </div>
                     <div class = "tag-col">
-                        <input type="checkbox" class = "check-box-input" name="tag4" id="tag4" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag4" id="tag4" value="Village">
                         <label for="tag4">Lava</label><br>
-                        <input type="checkbox" class = "check-box-input" name="tag5" id="tag5" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag5" id="tag5" value="Village">
                         <label for="tag5">Diamonds</label><br>
-                        <input type="checkbox" class = "check-box-input" name="tag6" id="tag6" value="Village">
+                        <input type="checkbox" class = "tag-check-box" name="tag6" id="tag6" value="Village">
                         <label for="tag6">Mineshaft</label><br>
                     </div>
                 </div>
