--- a/Templates/rawhtml/Project2/css/build-ideas_style.css
+++ b/Templates/rawhtml/Project2/css/build-ideas_style.css
@@ -4,10 +4,12 @@
     flex-wrap: wrap;
     /* border-style: solid; */
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .card {
     border-style: solid;
+    background-color: #cccccc;
     width: 200px;
     height: 300px;
     box-sizing: border-box;
@@ -21,8 +23,32 @@
     order: 1;
     height: 200px;
     box-sizing: border-box;
-    background-color: #cccccc;
     border-radius: 5px 5px 0px 0px;
+}
+
+.build-img {
+    width: 100%;
+    height: 200px;
+}
+
+#house {
+    object-fit: cover;
+    object-position: -50px;                 /* crops the image into the frame */
+}
+
+#aquarium {
+    object-fit: cover;
+    object-position: -60px;                 /* crops the image into the frame */
+}
+
+#stable {
+    object-fit: cover;
+    object-position: -35px;                 /* crops the image into the frame */
+}
+
+#boat {
+    object-fit: cover;
+    object-position: -85px;                 /* crops the image into the frame */
 }
 
 .card-description {
@@ -32,6 +58,15 @@
     /* border-style: solid; */
     padding: 5px;
     border-radius: inherit;
+    margin: 0 auto;
+}
+
+.text-desc {
+    text-align: center;
+}
+
+.back-display {
+    padding: 5px;
 }
 
 .build-feedback-perc {
@@ -43,8 +78,19 @@
     padding-right: 5px;
 }
 
+.build-material {
+    height: 275px;
+}
+
+.feedback {
+    display: flex;
+    justify-content: space-around;
+    align-content: flex-end;
+}
+
 #haveidea {
-    margin-top: 2%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #haveidea a {
@@ -54,6 +100,7 @@
     padding: 2px;
 }
 
+/* @Karen likes this look better where the cards all stay the same display size
 @media (max-width: 49.9375em) {
     .card {
        width: 300px;
@@ -66,4 +113,18 @@
        width: 400px;
        height: 500px;
     }
+}
+*/
+
+h3 {
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+h3:hover {
+    color: green;
+}
+
+li {
+    font-size: 1em;
 }
