Fixed overlap for small display
"back to top" was hiding under footer

--- a/Templates/rawhtml/Project2/get-minecraft.html
+++ b/Templates/rawhtml/Project2/get-minecraft.html
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 			<!-- anchor to top, need to not display when selection not chosen -->
-			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a><br>
+			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 <!-- Footer -->
 		<div class = "footer">
