Did some things
Moved stuff to static and figured out all of our main app routes for now

--- a/templates/template.html
+++ b/templates/template.html
@@ -12,12 +12,12 @@
 		<div class = "header">All you need to know about Minecraft</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
-			<a href="homepage.html">Home</a>
-			<a href="get-minecraft.html">Get Minecraft</a>
-			<a href="blog-posts.html">Blog Posts</a>
-			<a href="world-seeds.html">World Seeds</a>
-			<a href="build-ideas.html">Build Ideas</a>
-			<a href="admin-login.html">Login</a>
+			<a href="/home">Home</a>
+			<a href="/getmc">Get Minecraft</a>
+			<a href="/blogpost">Blog Posts</a>
+			<a href="/worldseed">World Seeds</a>
+			<a href="/buildideas">Build Ideas</a>
+			<a href="/adminlogin">Login</a>
 		</div>
 	</div>
 
