--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -38,6 +38,6 @@
 	       			</tr>
 	    		</table>
 	    	</div>
-			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a>
+			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
