--- a/templates/template.html
+++ b/templates/template.html
@@ -7,6 +7,8 @@
 		{% block localcss %} {% endblock %}
 	</head>
 	<body>
+
+	<a name="to-top"></a>
 	<div class="stickysticky">
 <!-- Banner at Head of Webpage -->
 		<div class = "header">All you need to know about Minecraft</div>
@@ -23,7 +25,6 @@
 
     {% block content %}
     {% endblock %}
-
     <div class = "footer">
 			<div class = "footer-contact-info">
 				<h3>Check out the official Minecraft social media for more</h3>
