--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -73,6 +73,6 @@
 				</div>
 			</div>
 			<!-- anchor to top, need to not display when selection not chosen -->
-			<a href="#to-get-mc-top"><h3 class="to-top">Back to Top</h3></a>
+			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
