Created updated links to pages

--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -8,7 +8,7 @@
     <!-- Main Body of Page -->
 		<div class = "main">
 			<div id = "make-blog-post">
-				<a href="new-blog-post.html"><center><input type="button" value = "Create a Post" id = "new-post"></center></a>
+				<a href="/newpost"><center><input type="button" value = "Create a Post" id = "new-post"></center></a>
 	    	</div>
 			<div class = "list-blog-posts">
 				<table class="listings">
