--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -5,7 +5,7 @@
     <!-- Main Body of Page -->
 		<div class = "main">
 			<div id = "create-world-seed">
-				<a href="new-world-seed.html"><center><input type="button" value = "Add a World Seed" id = "new-seed"></center></a>
+				<a href="/newseed"><center><input type="button" value = "Add a World Seed" id = "new-seed"></center></a>
             </div>
             <div class = "list-world-seeds">
                     <table class="listings">
