--- a/templates/template.html
+++ b/templates/template.html
@@ -1,6 +1,6 @@
 <html lang="en">
 	<head>
-		<title>Home</title>
+		<title>{{ title }}</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="{{url_for('static', filename='css/global.css')}}">
 		<link rel="icon" href="{{url_for('static', filename='images/favicon.ico')}}">
