--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -14,7 +14,7 @@
             <div class="cards-container">
                 <div class = "card front">
                     <div class = "card-image">
-						<img src = "images/house-build.jpg" alt = "House Build" class = "build-img"  id = "house">
+						<img src = "{{url_for('static', filename='images/house-build.jpg')}}" alt = "House Build" class = "build-img"  id = "house">
                     </div>
                     <div class="card-description">
 						<h2 class = "text-desc">Starter House</h2>
@@ -46,7 +46,7 @@
 
 				<div class = "card front">		<!-- https://youtu.be/wQI5lww6j9I -->
                     <div class = "card-image">
-						<img src = "images/aquarium-build.jpg" alt = "Aquarium Build" class = "build-img" id = "aquarium">
+						<img src = "{{url_for('static', filename='images/aquarium-build.jpg')}}" alt = "Aquarium Build" class = "build-img" id = "aquarium">
                     </div>
                     <div class="card-description">
 						<h2 class = "text-desc">Wall-less Aquarium</h2>
@@ -58,7 +58,7 @@
 
 				<div class = "card front">		<!-- https://youtu.be/PPAa2T1pBto -->
                     <div class = "card-image">
-						<img src = "images/stable-build.jpg" alt = "Horse Stable Build" class = "build-img" id = "stable">
+						<img src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
                     </div>
                     <div class="card-description">
 						<h2 class = "text-desc">Horse Stable</h2>
@@ -70,7 +70,7 @@
 
 				<div class = "card front">		<!-- https://youtu.be/kNFsOqg7aUo -->
                     <div class = "card-image">
-						<img src = "images/boat-build.jpg" alt = "Boat Build" class = "build-img" id = "boat">
+						<img src = "{{url_for('static', filename='images/boat-build.jpg')}}" alt = "Boat Build" class = "build-img" id = "boat">
                     </div>
                     <div class="card-description">
 						<h2 class = "text-desc">Boat House</h2>
