--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -11,17 +11,17 @@
 			<div class = "display-download-options">
 				<a href="#purchase-download">
 					<div class = "option-selection" id = "computer">
-						<img src="images/computer.png" alt="computer">
+						<img src="{{url_for('static', filename='images/computer.png')}}" alt="computer">
 					</div>
 				</a>
 				<a href="#purchase-download">
 					<div class = "option-selection" id = "mobile">
-						<img src="images/phone.png" alt="Mobile">
+						<img src="{{url_for('static', filename='images/phone.png')}}" alt="Mobile">
 					</div>
 				</a>
 				<a href="#purchase-download">
 					<div class = "option-selection" id = "console">
-						<img src="images/console.png" alt="Gaming Console">
+						<img src="{{url_for('static', filename='images/console.png')}}" alt="Gaming Console">
 					</div>
 				</a>
 			</div>
