Fixed Headers and whatnot

--- a/templates/template.html
+++ b/templates/template.html
@@ -11,7 +11,7 @@
 	<a name="to-top"></a>
 	<div class="stickysticky">
 <!-- Banner at Head of Webpage -->
-		<div class = "header">All you need to know about Minecraft</div>
+		<div class = "header">{{ header }}</div>
 <!-- Navigation Bar -->
 		<div class = "navigation">
 			<a href="/home">Home</a>
