--- a/static/css/global.css
+++ b/static/css/global.css
@@ -41,7 +41,6 @@
 .main {
 	margin: 0;
 	padding: 10px;
-	min-height: 100%;
 }
 
 .check-box-input {
@@ -142,7 +141,7 @@ html{
 body {
     position: relative;
     margin: 0;
-    min-height: 100%;
+    min-height: 100vh;
     background-color: #006600;
     padding-bottom: 7rem;
 }
