--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -8,7 +8,7 @@
     <!-- Main Body of Page -->
 		<div class = "main">
 			<div id="haveidea">
-				<h2>Have a build idea? <a href="buildideaform.html">Tell us.</a></h2>
+				<h2>Have a build idea? <a href="/buildform">Tell us.</a></h2>
 			</div>
 
             <div class="cards-container">
