--- a/static/css/global.css
+++ b/static/css/global.css
@@ -38,11 +38,6 @@
 
 /* ------------------------------------------------------------------------ */
 
-.main {
-	margin: 0;
-	padding: 10px;
-}
-
 .check-box-input {
     width: 30px;
     height: 30px;
@@ -128,7 +123,7 @@
 /* ------------------------------------------------------------------------ */
 
 html{
-    height: 100%;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
@@ -141,7 +136,7 @@ html{
 body {
     position: relative;
     margin: 0;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: #006600;
     padding-bottom: 7rem;
 }
@@ -191,3 +186,8 @@ td:hover {
 
 /* ------------------------------------------------------------------------ */
 
+.main {
+	margin: 0;
+	padding: 10px;
+	min-height: 100%;
+}
