Added text for webpages

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,10 +22,13 @@
 			</div>
 			<div id = "about-mc">
 				<h1>About Minecraft</h1>
-				<p>This is some text about minecraft, we will fill this in later but for now this is some placeholder
-					text yada yada yada. This is some text about minecraft, we will fill this in later but for now this
-					is some placeholder text yada yada yada.This is some text about minecraft, we will fill this in
-					later but for now this is some placeholder text yada yada yada.</p>
+				<p>The game Minecraft was first released in November 2011. In the game, players explore a generated world
+					of block materials. Players can make use of these materials to build tools, items, structures, or
+					whatever they can imagine.</p>
+				<p>Within the game, there are no defined rules or objectives that players have to follow. One feature
+				the game offers is creative mode, which allows the player to create with infinite resources. Additionally,
+				there is also a survival mode where players will need to discover and extract resources in the world in
+				order to use the materials. </p>
 			</div>
 
 			<div class = "new-features">
