--- a/templates/get-minecraft.html
+++ b/templates/get-minecraft.html
@@ -31,35 +31,25 @@
 			<div class = "selection-displayed">
 				<div class = "purchase-where">
 					<h2>Where to purchase/download</h2>
-					<p>In this section, we will a different display that is determined by the above option chosen that will display
-						where the user can download. For example, for mobile devices, the user will be directed to the app
-						store where they can download. Javascript will allow hiding and showing content based on
-						ID dependent on which icon is clicked.</p>
-					<p>An additional option that will occur is once the user chooses an option, it will jump to the
-					"Where to purchase/download" section so when the user is in a small display, they will not need to
-						scroll. [<i>these paragraphs are just to explain what will be added later, the
-							bullets will be displayed</i>]</p>
+					<p>Choose which type of device you would like to download Minecraft on:</p>
+<!-- Still need to add part where only certain part displays -->
+			<!-- if mobile -->
 					<ul id="moblist">
-						<li>Mobile - iOS:
-							<a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8" target="_blank">Link</a></li>
-						<li>Mobile - Android:
-							<a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe" target="_blank">Link</a></li>
+						<li><a href = "https://itunes.apple.com/app/minecraft-pocket-edition/id479516143?mt=8" target="_blank">iOS/iPadOS</a></li>
+						<li><a href = "https://play.google.com/store/apps/details?id=com.mojang.minecraftpe" target="_blank">Android</a></li>
 					</ul>
 
+			<!-- if computer -->
 					<ul id="comlist">
-						<li>Computer - Windows/Mac OS/Linux:
-							<a href = "https://www.minecraft.net/en-us/store/minecraft-java-edition" target="_blank">Link</a></li>
-						<li>Computer - Windows 10:
-							<a href = "https://www.minecraft.net/en-us/store/minecraft-windows10" target="_blank">Link</a></li>
+						<li><a href = "https://www.minecraft.net/en-us/store/minecraft-java-edition" target="_blank">Windows/Mac OS/Linux</a></li>
+						<li><a href = "https://www.minecraft.net/en-us/store/minecraft-windows10" target="_blank">Windows 10</a></li>
 					</ul>
 
+			<!-- if console -->
 					<ul id="conlist">
-						<li>Game Console - Nintendo Switch:
-							<a href = "https://www.nintendo.com/games/detail/minecraft-switch/" target="_blank">Link</a></li>
-						<li>Game Console - Playstation:
-							<a href = "https://store.playstation.com/en-us/product/UP4433-CUSA00744_00-MINECRAFTPS40001" target="_blank">Link</a></li>
-						<li>Game Console - Xbox:
-							<a href = "https://www.minecraft.net/en-us/store/minecraft-xbox-one" target="_blank">Link</a></li>
+						<li><a href = "https://www.nintendo.com/games/detail/minecraft-switch/" target="_blank">Nintendo Switch</a></li>
+						<li><a href = "https://store.playstation.com/en-us/product/UP4433-CUSA00744_00-MINECRAFTPS40001" target="_blank">Playstation</a></li>
+						<li><a href = "https://www.minecraft.net/en-us/store/minecraft-xbox-one" target="_blank">Xbox</a></li>
 					</ul>
 				</div>
 				<div class="download-where">
