--- a/templates/template.html
+++ b/templates/template.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 
+
+	<div id="contain">
 	<a name="to-top"></a>
 	<div class="stickysticky">
 <!-- Banner at Head of Webpage -->
@@ -34,6 +36,8 @@
 				<a href="https://www.youtube.com/Minecraft" target="_blank"><img alt="YouTube logo" src="{{url_for('static', filename='images/youtube-logo.png')}}" class = "social-media-links"></a>
 				<a href="https://www.facebook.com/minecraft/" target="_blank"><img alt="Facebook logo" src="{{url_for('static', filename='images/facebook-logo.png')}}" class = "social-media-links"></a>
 			</div>
+	</div>
+
 	</div>
     </body>
 </html>
