--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -80,5 +80,6 @@
                     </div>
                 </div>
             </div>
+			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
