--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,5 +46,6 @@
 				</div>
 			</div>
 			<p id = "-new-feature-title" align="center">New Characters</p>
+			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
