All links to pages work

--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -7,11 +7,11 @@
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
-			<h1>Blog Post Title</h1> <!-- {{ blog.title }} -->
+			<h1>Title</h1>
 			<p>This is a sample blog post and the contents of the submitted post. In each blog post,
 				there will be a title, and a body paragraph created from the user.
 				Only the admin after logging in will be able to delete blog posts from the main blog post page.</p>
-			<a href="blog-posts.html"><center><input type="button" value = "All Posts" id = "all-posts"></center></a>
+			<a href="/blogpost"><center><input type="button" value = "All Posts" id = "all-posts"></center></a>
 			<br><br>
 		</div>
 {% endblock %}
