--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -17,7 +17,7 @@
 				            <label class="checkbox">
 				              <input type="checkbox" class = "check-box-input" name="blog-title" /> <!--value="{{ movie_key }}" -->
 				            </label>
-							<label><a href="blog-post.html">Title of Post (placeholder 1)</a></label>
+							<label>Title of Post (placeholder 1)</label>
 				        </td>
 	       			</tr>
 					<tr>
