--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -10,7 +10,7 @@
 			<!-- This <a> is just to link to the blog post example -->
 
 				<input type="submit">
-				<br><a href="blog-post.html">link to post</a>
+				<br><a href="/viewpost">link to post</a>
             </form>
 		</div>
 {% endblock %}
