--- a/templates/new-world-seed.html
+++ b/templates/new-world-seed.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <input type="submit">
-                <br><a href="world-seed.html">link to seed</a>
+                <br><a href="/viewseed">link to seed</a>
                 <br><br>
             </form>
 		</div>
