--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,7 +12,7 @@
 					<img src="{{url_for('static', filename='images/get-mc1.jpg')}}" alt="Get Minecraft Image" id = "image-home">
 				</div>
 				<div id = "get-mc-button-np">
-					<p>Join the Minecraft community today!</p>	<!-- for smaller display, have button on same line -->
+					<h1>Join the Minecraft community today!</h1>
 
 
 			<!-- Make a javacript for this for the onclick using: document.getElementById("link-get-mc").onclick = function () {
