--- a/static/css/build-ideas_style.css
+++ b/static/css/build-ideas_style.css
@@ -7,9 +7,71 @@
     margin-bottom: 20px;
 }
 
+/* -------------------- Test for Flip Card ---------------------- */
+
+.card-container {
+  background-color: transparent;
+  width: 200px;
+  height: 300px;
+  box-sizing: border-box;
+  perspective: 1000px;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.flip-card-content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.card-container:hover .flip-card-content {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  background-color: #ccc;
+  border-style: solid;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+
+}
+
+.flip-card-back {
+  padding: 5px;
+  transform: rotateY(180deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ---------------------------------------------------------------------- */
+
 .card {
     border-style: solid;
-    background-color: #cccccc;
+    background-color: #ccc;
     width: 200px;
     height: 300px;
     box-sizing: border-box;
@@ -25,6 +87,7 @@
     box-sizing: border-box;
     border-radius: 5px 5px 0px 0px;
 }
+
 
 .build-img {
     width: 100%;
@@ -55,7 +118,6 @@
     height: 70px;
     order: 2;
     box-sizing: border-box;
-    /* border-style: solid; */
     padding: 5px;
     border-radius: inherit;
     margin: 0 auto;
@@ -73,13 +135,13 @@
     order: 3;
     height: 30px;
     box-sizing: border-box;
-    /* border-style: solid; */
     text-align: right;
     padding-right: 5px;
 }
 
 .build-material {
     height: 275px;
+
 }
 
 .feedback {
