--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -2,6 +2,49 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/build-ideas_style.css')}}">
+<style>
+	.flip-card {
+  background-color: transparent;
+  width: 200px;
+  height: 300px;
+  box-sizing: border-box;
+  perspective: 1000px;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  background-color: #bbb;
+  border-style: solid;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+
+}
+
+.flip-card-back {
+
+  transform: rotateY(180deg);
+}
+</style>
 {% endblock %}
 
 {% block content %}
@@ -11,6 +54,198 @@
 				<h2>Have a build idea? <a href="/buildform">Tell us.</a></h2>
 			</div>
 
+
+
+<!-- Work in Progress -->
+
+			<div class = "cards-container">
+				<div class="flip-card">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-front">
+      						<div class = "card-image">
+								<img src = "{{url_for('static', filename='images/house-build.jpg')}}" alt = "House Build" class = "build-img"  id = "house">
+							</div>
+							<div class="card-description">
+								<h2 class = "text-desc">Starter House</h2>
+							</div>
+							<div class = "build-feedback-perc">
+								75% like this
+							</div>
+    					</div>
+    					<div class="flip-card-back">
+    						<div class = "build-material">
+								<a href = "https://youtu.be/jUmIeyMsYXE?t=34" target="_blank"><h3>Tutorial</h3></a>
+								<ul>
+									<li>Birch Wood Planks</li>
+									<li>Birch Fence</li>
+									<li>Glass Pane</li>
+									<li>Oak Door</li>
+									<li>Oak Wood Stairs</li>
+									<li>Birch Wood Slab</li>
+									<li>Oak Wood Slab</li>
+								</ul>
+							</div>
+
+							<div class = "feedback">
+								<input type="button" value = "Like" id = "like-build1" class="like">
+								<input type="button" value = "Dislike" id = "dislike-build1" class="dislike">
+							</div>
+    					</div>
+  					</div>
+				</div>
+
+
+
+				<div class="flip-card">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-front">
+      						<div class = "card-image">
+								<img src = "{{url_for('static', filename='images/aquarium-build.jpg')}}" alt = "Aquarium Build" class = "build-img" id = "aquarium">
+							</div>
+							<div class="card-description">
+								<h2 class = "text-desc">Wall-less Aquarium</h2>
+							</div>
+							<div class = "build-feedback-perc">
+								80% like this
+							</div>
+    					</div>
+    					<div class="flip-card-back">
+    						<div class = "build-material">
+								<a href = "https://youtu.be/wQI5lww6j9I" target="_blank"><h3>Tutorial</h3></a>
+								<ul>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+								</ul>
+							</div>
+
+							<div class = "feedback">
+								<input type="button" value = "Like" id = "like-build2" class="like">
+								<input type="button" value = "Dislike" id = "dislike-build2" class="dislike">
+							</div>
+    					</div>
+  					</div>
+				</div>
+
+
+
+				<div class="flip-card">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-front">
+      						<div class = "card-image">
+								<img src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
+							</div>
+							<div class="card-description">
+								<h2 class = "text-desc">Horse Stable</h2>
+							</div>
+							<div class = "build-feedback-perc">
+								45% like this
+							</div>
+    					</div>
+    					<div class="flip-card-back">
+    						<div class = "build-material">
+								<a href = "https://youtu.be/PPAa2T1pBto" target="_blank"><h3>Tutorial</h3></a>
+								<ul>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+								</ul>
+							</div>
+
+							<div class = "feedback">
+								<input type="button" value = "Like" id = "like-build3" class="like">
+								<input type="button" value = "Dislike" id = "dislike-build3" class="dislike">
+							</div>
+    					</div>
+  					</div>
+				</div>
+
+
+
+				<div class="flip-card">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-front">
+      						<div class = "card-image">
+								<img src = "{{url_for('static', filename='images/boat-build.jpg')}}" alt = "Boat Build" class = "build-img" id = "boat">
+							</div>
+							<div class="card-description">
+								<h2 class = "text-desc">Boat House</h2>
+							</div>
+							<div class = "build-feedback-perc">
+								100% like this
+							</div>
+    					</div>
+    					<div class="flip-card-back">
+    						<div class = "build-material">
+								<a href = "https://youtu.be/kNFsOqg7aUo" target="_blank"><h3>Tutorial</h3></a>
+								<ul>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+								</ul>
+							</div>
+
+							<div class = "feedback">
+								<input type="button" value = "Like" id = "like-build4" class="like">
+								<input type="button" value = "Dislike" id = "dislike-build4" class="dislike">
+							</div>
+    					</div>
+  					</div>
+				</div>
+
+
+
+
+				<div class="flip-card">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-front">
+      						<div class = "card-image">
+								<img src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
+							</div>
+							<div class="card-description">
+								<h2 class = "text-desc">Horse Stable</h2>
+							</div>
+							<div class = "build-feedback-perc">
+								45% like this
+							</div>
+    					</div>
+    					<div class="flip-card-back">
+    						<div class = "build-material">
+								<a href = "https://youtu.be/wQI5lww6j9I" target="_blank"><h3>Tutorial</h3></a>
+								<ul>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+									<li>Blank</li>
+								</ul>
+							</div>
+
+							<div class = "feedback">
+								<input type="button" value = "Like" id = "like-build5" class="like">
+								<input type="button" value = "Dislike" id = "dislike-build5" class="dislike">
+							</div>
+    					</div>
+  					</div>
+				</div>
+
+			</div>
+
+<!-- Transfer to flip-card
             <div class="cards-container">
                 <div class = "card front">
                     <div class = "card-image">
@@ -38,13 +273,13 @@
 						</ul>
 					</div>
 
-					<div class = "feedback"><!-- disable after clicking 1 -->
+					<div class = "feedback">
 						<input type="button" value = "Like" id = "like-build1" class="like">
 						<input type="button" value = "Dislike" id = "dislike-build1" class="dislike">
 					</div>
                 </div>
 
-				<div class = "card front">		<!-- https://youtu.be/wQI5lww6j9I -->
+				<div class = "card front">
                     <div class = "card-image">
 						<img src = "{{url_for('static', filename='images/aquarium-build.jpg')}}" alt = "Aquarium Build" class = "build-img" id = "aquarium">
                     </div>
@@ -56,7 +291,7 @@
                     </div>
                 </div>
 
-				<div class = "card front">		<!-- https://youtu.be/PPAa2T1pBto -->
+				<div class = "card front">
                     <div class = "card-image">
 						<img src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
                     </div>
@@ -68,7 +303,7 @@
                     </div>
                 </div>
 
-				<div class = "card front">		<!-- https://youtu.be/kNFsOqg7aUo -->
+				<div class = "card front">
                     <div class = "card-image">
 						<img src = "{{url_for('static', filename='images/boat-build.jpg')}}" alt = "Boat Build" class = "build-img" id = "boat">
                     </div>
@@ -79,7 +314,8 @@
 						100% like this
                     </div>
                 </div>
-            </div>
+-->
+	
 			<a href="#to-top"><h3 class="to-top">Back to Top</h3></a>
 		</div>
 {% endblock %}
