--- a/static/css/build-ideas_style.css
+++ b/static/css/build-ideas_style.css
@@ -1,13 +1,24 @@
+#haveidea {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#haveidea a {
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: green;
+    padding: 2px;
+}
+
+/* -------------------- Flip Card ---------------------- */
+
 .cards-container {
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* border-style: solid; */
     justify-content: center;
     margin-bottom: 20px;
 }
-
-/* -------------------- Test for Flip Card ---------------------- */
 
 .card-container {
   background-color: transparent;
@@ -23,7 +34,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -34,7 +44,7 @@
 }
 
 .card-front, .card-back {
-  background-color: #ccc;
+  background-color: #bbb;
   border-style: solid;
   position: absolute;
   width: 100%;
@@ -43,55 +53,23 @@
   backface-visibility: hidden;
 }
 
-.flip-card-front {
+.card-front {
 
 }
 
-.flip-card-back {
+.card-back {
   padding: 5px;
   transform: rotateY(180deg);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ---------------------------------------------------------------------- */
-
-.card {
-    border-style: solid;
-    background-color: #ccc;
-    width: 200px;
-    height: 300px;
-    box-sizing: border-box;
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-}
 
 .card-image {
     order: 1;
     height: 200px;
+    width: 100%;
     box-sizing: border-box;
     border-radius: 5px 5px 0px 0px;
-}
-
-
-.build-img {
-    width: 100%;
-    height: 200px;
 }
 
 #house {
@@ -114,6 +92,11 @@
     object-position: -85px;                 /* crops the image into the frame */
 }
 
+#nether {
+    object-fit: cover;
+    object-position: 0px;                 /* crops the image into the frame */
+}
+
 .card-description {
     height: 70px;
     order: 2;
@@ -127,10 +110,6 @@
     text-align: center;
 }
 
-.back-display {
-    padding: 5px;
-}
-
 .build-feedback-perc {
     order: 3;
     height: 30px;
@@ -140,26 +119,13 @@
 }
 
 .build-material {
-    height: 275px;
-
+    height: 250px;
 }
 
 .feedback {
     display: flex;
     justify-content: space-around;
     align-content: flex-end;
-}
-
-#haveidea {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-#haveidea a {
-    border: 2px solid black;
-    border-radius: 5px;
-    background-color: green;
-    padding: 2px;
 }
 
 /* @Karen likes this look better where the cards all stay the same display size
@@ -183,7 +149,7 @@ h3 {
     margin-bottom: 5px;
 }
 
-h3:hover {
+.tutorial:hover {
     color: green;
 }
 
