--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -2,6 +2,7 @@
 
 {% block localcss %}
     <link rel="stylesheet" href="{{url_for('static', filename='css/blog-posts-hub_style.css')}}">
+	<script type="text/javascript" src="{{url_for('static', filename='scripts/getposts.js')}}"></script>
 {% endblock %}
 
 {% block content %}
