--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -1,16 +1,14 @@
-{% extends "template.html" %}
+{% extends "template.html"%}
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
             <form>
                 <h2>Title</h2>
-                <input type="text" style="width: 100%;"><br><br>
+                <input type="text" style="width: 100%;" name="subject"><br><br>
                 <h2>Begin your post here</h2>
-                <textarea rows="10" style="width: 100%;"></textarea><br><br>
+                <textarea rows="10" style="width: 100%;" name="body"></textarea><br><br>
 			<!-- This <a> is just to link to the blog post example -->
-
-				<input type="submit">
-				<br><a href="/viewpost">link to post</a>
+				<input type="submit" formaction='/addblog' formmethod="post">
             </form>
 		</div>
 {% endblock %}
